--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,8 @@ ignore = W503
     ANN102
     ANN202
     ANN204
+
+[isort]
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = true
