--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,7 @@
 [flake8]
-ignore = W503
-    E501
-    ANN002
-    ANN003
-    ANN101
-    ANN102
-    ANN202
-    ANN204
+ignore = W503,E501,ANN002,ANN003,ANN101,ANN102,ANN202,ANN204
 
 [isort]
 line_length = 100
 multi_line_output = 3
 include_trailing_comma = true
-known_standard_library = requests
