--- a/.github/workflows/publishdevdocs.yml
+++ b/.github/workflows/publishdevdocs.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         pip install .[docs]
-        pip install markdown_refdocs
+        pip install markdown_refdocs mkdocs
         markdown_refdocs graphkb -o docs/reference --link
         mkdocs build
     - name: Deploy
