--- a/.github/workflows/publishdevdocs.yml
+++ b/.github/workflows/publishdevdocs.yml
@@ -15,14 +15,14 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: install and build
       run: |
         python -m pip install --upgrade pip setuptools
         pip install .[docs]
-        pip install markdown_refdocs mkdocs
+        pip install markdown_refdocs mkdocs mkdocs-material
         markdown_refdocs graphkb -o docs/reference --link
         mkdocs build
     - name: Deploy
