--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ nav:
       - graphkb.vocab: reference/graphkb/vocab.md
 theme:
   name: "material"
-repo_url: https://svn.bcgsc.ca/bitbucket/projects/DAT/repos/graphkb_python
-repo_name: Bitbucket
+repo_url: https://github.com/bcgsc/pori_graphkb_python
+repo_name: github
 site_dir: build-docs
 markdown_extensions:
   - codehilite
