--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,15 +1,4 @@
 site_name: GraphKB Python
-nav:
-  - Home: index.md
-  - Tutorial: tutorial.md
-  - matching_algorithm.md
-  - Reference:
-      - graphkb: reference/graphkb/__init__.md
-      - graphkb.genes: reference/graphkb/genes.md
-      - graphkb.match: reference/graphkb/match.md
-      - graphkb.types: reference/graphkb/types.md
-      - graphkb.util: reference/graphkb/util.md
-      - graphkb.vocab: reference/graphkb/vocab.md
 theme:
   name: "material"
 repo_url: https://github.com/bcgsc/pori_graphkb_python
@@ -17,3 +6,4 @@ repo_name: github
 site_dir: build-docs
 markdown_extensions:
   - codehilite
+  - admonition
