--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,3 +13,9 @@ extra_javascript:
   - js/mathjax.config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+extra_css:
+  - extra.css
+plugins:
+    - redirects:
+        redirect_maps:
+            'usage_examples/tutorial.md': 'usage_examples/intro_tutorial.md' # support old links
