--- a/.github/workflows/publishdevdocs.yml
+++ b/.github/workflows/publishdevdocs.yml
@@ -21,8 +21,7 @@ jobs:
     - name: install and build
       run: |
         python -m pip install --upgrade pip setuptools
-        pip install .[docs]
-        pip install markdown_refdocs mkdocs mkdocs-material
+        pip install .[doc]
         markdown_refdocs graphkb -o docs/reference --link
         mkdocs build
     - name: Deploy
