--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,6 +37,7 @@ jobs:
       env:
         GRAPHKB_USER: ${{ secrets.GKB_TEST_USER }}
         GRAPHKB_PASS: ${{ secrets.GKB_TEST_PASS }}
+        EXCLUDE_INTEGRATION_TESTS: 1
     - name: Upload pytest test results
       uses: actions/upload-artifact@master
       with:
