fix test package versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,13 +29,13 @@ install_requires =
 deploy = twine; wheel
 test = pytest; pytest-runner; pytest-cov
 doc = mkdocs; markdown_refdocs; mkdocs-material; mkdocs-redirects
-dev = 
+dev =
     twine
     wheel
     pytest
     pytest-runner
     pytest-cov
-    mkdocs 
+    mkdocs
     markdown_refdocs
     mkdocs-material
     mkdocs-redirects
@@ -44,6 +44,11 @@ dev =
     flake8-annotations
     isort
     mypy
+    xdist==1.27.0
+    forked==1.0.2
+    pluggy==0.13.1
+    pytest==6.1.2
+    cov==2.10.1
 
 [options.package_data]
 graphkb = py.typed
