--- a/.github/workflows/publishdevdocs.yml
+++ b/.github/workflows/publishdevdocs.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         pip install .[doc]
+        pip list
         markdown_refdocs graphkb -o docs/reference --link
         mkdocs build
     - name: Deploy
