--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ python_requires = >=3.6
 dependency_links = []
 include_package_data = True
 install_requires =
-    requests<2.29.0
+    requests
     typing_extensions>=3.7.4.2,<4.4
 
 [options.extras_require]
