--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ dev =
     markdown_refdocs
     mkdocs-material
     mkdocs-redirects
-    black==19.10b0
+    black
     flake8
     flake8-annotations
     isort
