install compatibility fixes - remove typing_extensions>=<4.4 - creating install problems on many unix versions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ dependency_links = []
 include_package_data = True
 install_requires =
     requests<2.29.0
-    typing_extensions>=3.7.4.2,<4.4
+    typing_extensions>=3.7.4.2
 
 [options.extras_require]
 deploy = twine; wheel
